# MathShooter

./: .gitignore  .project  .pydevproject  .travis.yml  .travis.yml~  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/: MathShooter.py  README.txt  assets.py  config.py  entities.py  game.py  interfaces.py  main.py  operations.py  tests.py  tests.py~  ui.py
tests/: conftest.py  test_config.py  test_operations.py  test_ui_logic.py
